fixed bottom spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -104,6 +104,7 @@ button.button.is-link
 footer.footer
   padding: 1rem 0rem
   background-color: transparent
+  margin-bottom: 0 !important
 
 //Menu overrides
 $menu-item-color: $white-ter
